--- a/client/src/components/Cover/PendingSupervisor/PendingSupervisor.css
+++ b/client/src/components/Cover/PendingSupervisor/PendingSupervisor.css
@@ -1,6 +1,6 @@
 .topWords{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 80%;
     margin:auto;
     padding-top: 2%;
