--- a/client/src/components/Cover/WithCheck.css
+++ b/client/src/components/Cover/WithCheck.css
@@ -8,11 +8,12 @@
     padding: 1%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     padding-left: 2%;
     padding-right: 2%;
     font-weight: 300;
     font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .time_loc{
@@ -54,7 +55,8 @@
     width: 40%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin-left: 11%;
+    /* align-items: center; */
 }
 
 .covering{
@@ -63,7 +65,8 @@
     width: 40%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin-left: 8%;
+    /* align-items: center; */
 }
 .approval{
     display: flex;
@@ -75,12 +78,12 @@
 
 .check{
     height: 29%;
-    width: 18.5%;
+    width: 21%;
     margin-right: 3%;
 }
 
 .deny{
     height: 29%;
-    width: 18%;
+    width: 21%;
     margin-left: 3%;
 }
